# my-hv

./: .gitignore  .gitmodules  README.md
.cursor/rules/: karpathy-guidelines.mdc  specify-rules.mdc
.github/workflows/: build.yaml  code-formatting-check.yaml  docs.yaml  lint.yaml
.specify/: feature.json
client/: Cargo.toml
client/src/: main.rs
driver/: Cargo.toml  REFERENCE_MAP.md  my_hv_driver.inx
driver/src/: arch.rs  ept.rs  exception_inject.rs  exit_handlers.rs  gdt.rs  guest_context.rs  host_descriptor.rs  host_interrupts.rs  host_isr.rs  host_page_tables.rs  hypercalls.rs  ia32.rs  idt.rs  introspection.rs  lib.rs  logger.rs  mm.rs  msr_bitmap.rs  mtrr.rs  offset_table.rs  segment.rs  timing.rs  vcpu.rs  vm_launch.rs  vmcs.rs  vmexit.rs  vmx.rs
shared-contract/: Cargo.toml
shared-contract/src/: lib.rs
specs/001-refactor-vtx-driver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-refactor-vtx-driver/checklists/: requirements.md
specs/001-refactor-vtx-driver/contracts/: README.md  driver-interface.md
